[package]
name = "pomelo"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>"]
description = "Implementation of the Lemon parser generator as a Rust procedural macro"
readme = "README.md"
categories = ["parsing"]
keywords = ["parser", "parser-generator", "lemon", "bison", "yacc"]
repository = "https://github.com/rodrigorc/pomelo"
documentation = "https://docs.rs/pomelo"

[workspace]
members = ["pomelo-impl", "pm-lexer"]

[dependencies]
pomelo-impl = { version = "=0.0.1", path="pomelo-impl"}

[dev-dependencies]
quote = "0.6"
proc-macro2 = "0.4"
compiletest_rs = { version = "0.3", features = ["stable"] }
pm-lexer = { version = "=0.0.1", path="pm-lexer" }
