[package]
name = "pomelo"
version = "0.1.5"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>"]
description = "Implementation of the Lemon parser generator as a Rust procedural macro"
readme = "README.md"
categories = ["parsing", "no-std"]
keywords = ["parser", "parser-generator", "lemon", "bison", "yacc"]
repository = "https://github.com/rodrigorc/pomelo"
documentation = "https://docs.rs/pomelo"

[package.metadata.docs.rs]
all-features = true

[features]
#For documentation purposes only, do not use!
doc_generated = []

[workspace]
members = ["pomelo-impl"]

[dependencies]
pomelo-impl = { version = "=0.1.5", path="pomelo-impl"}

[dev-dependencies]
quote = "1.0"
proc-macro2 = "1.0"
compiletest_rs = { version = "0.8", features = ["stable"] }
logos = "0.12"
