[package]
name = "pm-lexer"
version = "0.1.4"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>"]
description = "This is a sample lexer using the proc-macro crate, to be used in the pomelo testings"
repository = "https://github.com/rodrigorc/pomelo"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
