[package]
name = "pomelo-impl"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>"]
description = "Implementation details for pomelo, not to be used directly"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
syn = { version="0.15", features= ["full", "extra-traits"] }
