[package]
name = "pomelo-impl"
version = "0.1.3"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>"]
description = "Implementation details for pomelo, not to be used directly"
repository = "https://github.com/rodrigorc/pomelo"
documentation = "https://docs.rs/pomelo"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
syn = { version="0.15", features= ["full", "extra-traits"] }
